# stock-filter-py

./: .dockerignore  .env.docker.example  .env.example  .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  __init__.py  api.py  crontab  data.sql  db_demo.py  deploy.sh  docker-compose.prod.yml  docker-compose.yaml  fix_fstrings.py  futu_client.py  investNote.py  invest_note.py  main.py  pyproject.toml  pytest.ini  quick-build.sh  requirement.txt  requirements-minimal.txt  requirements.txt  run_tests.py  server.py  test.py  ticker_demo.py  update_table.sql  update_table_sqlite.sql
.cursor/rules/: app_flow_document.mdc  backend_guidelines_document.mdc  implementation_plan.mdc  project-structure.mdc  rules-document.mdc
api/: README.md  api.py  models.py
api/routers/: __init__.py  news.py  scheduler.py  ticker.py
app/: config.py  dependencies.py  logging_config.py  main.py  models.py
app/auth/: auth_middleware.py  grpc_auth_client.py
app/entities/: __init__.py  market.py  ticker.py  ticker_indicator.py  ticker_score.py  ticker_strategy.py  ticker_valuation.py
app/grpc/: __init__.py  auth_pb2.py  auth_pb2_grpc.py
app/handlers/: __init__.py  base_handler.py  market_handler.py  ticker_handler.py  ticker_indicator_handler.py  ticker_score_handler.py  ticker_strategy_handler.py  ticker_valuation_handler.py
app/middleware/: __init__.py  rate_limiter.py
app/repositories/: __init__.py  base_repository.py  market_repository.py  ticker_indicator_repository.py  ticker_repository.py  ticker_score_repository.py  ticker_strategy_repository.py  ticker_valuation_repository.py
app/routers/: __init__.py  scheduler.py  ticker.py
app/services/: __init__.py  auth_service.py  database_service.py  ticker_service.py
app/utils/: __init__.py  dongcai_ticker.py  response_utils.py  utils.py
config/: cron.yaml
core/: config.py  data_source_helper.py  utils.py
core/API/: BaseAPI.py  Indicator.py  MysqlHelper.py  Project.py  ProjectTicker.py  Strategy.py  Ticker.py  TickerDayLine.py  (+12 more)
custom/: Analysis.py  TickerHighValuation.py  TickerSQJZFilter.py  TickerScoreFilter.py  client.py
docs/: chromadb_usage_guide.md  cron_setup.md  dependencies-changelog.md  qwen_client_usage.md
examples/: chromadb_demo.py
memory-bank/: README.md  activeContext.md  productContext.md  progress.md  projectbrief.md  style-guide.md  systemPatterns.md  tasks.md  techContext.md
scripts/: code_quality.sh  cron_news_fetch.sh  crontab  debug_ticker_score.py  fix_code_quality.py  fix_fstring_issues.py  fix_naming_conventions.py  generate_grpc_code.py  init_news_sources.py  quick_check.sh  simple_check.sh  test_news_analysis.py  test_news_analysis_flow.py
setup/: init_sqlite_db.py
sql/: create_table.sql  create_table_sqlite.sql  final_migration.sql  migrate_data_cache.sql  update_remove_foreign_keys.sql
task/: data-cache-task.md
test/: test_api_endpoints.py  test_auth_service.py  test_cron_endpoint.py  test_debug_article.py  test_grpc_connection.py  test_invest_note.py  test_news_aggregation.py  test_news_aggregation_complete.py  test_repositories.py  test_rss_simple.py  test_sql_debug.py  test_stock_data_integration.py
tests/: README.md  __init__.py  conftest.py  demo_news_analysis_with_akshare.py  test_ai_agents_basic.py  test_ai_agents_data_converter.py  test_akshare_integration.py  test_pocketflow_agent.py  utils.py
tools/: add_remark_column.py  add_ticker_columns.py  check_imports.py  check_token_auth.py  clean_database.py  debug_auth_client.py  export_high_score_tickers.py  generate_grpc_code.py  grpc_direct_test.py  high_score_tickers.py  init_pyppeteer.py  test_news_api.py  test_news_system.py  test_xueqiu.py
web/: api.py
(+267 files in other folders)
